--- a/pages/learn/caos/02_12_06_matrici_di_markov_del_secondo_ordine.html
+++ b/pages/learn/caos/02_12_06_matrici_di_markov_del_secondo_ordine.html
@@ -94,14 +94,57 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Per ottenere una matrice di Markov del 2 ordine bisogna verificare le occorrenze di ogni
+                    nuovo stato a partire dall’essersi verificata una coppia di stati.
+                    <br>
+                    <br>
+                    Consideriamo 3 altezze: do, re, mi e una matrice di transizione del primo ordine:
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/54.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 54 <br> Matrice di transizione del 1 ordine</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Consideriamo ora la probabilità che si verifichi uno dei tre eventi (do,re,mi) dopo che si sia verificata una coppia di eventi.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-5">
+              <div class="image-wrapper">
+                <img src="https://www.gabrielavelitch.com/img/caos/55.webp" alt="www.gabrielavelitch.com">
+                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 55 <br>Matrice di transizione del 2 ordine </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
