--- a/pages/learn/caos/02_12_06_matrici_di_markov_del_secondo_ordine.html
+++ b/pages/learn/caos/02_12_06_matrici_di_markov_del_secondo_ordine.html
@@ -220,6 +220,39 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            L’oggetto bucket ricorda il dato in ingresso all’oggetto e lo restituisce in uscita
+            all’arrivo del dato successivo.
+            <br>
+            <br>
+            L’algoritmo prende due note consecutive MIDI, la prima delle quali viene shiftata di 7
+            posizioni (7 bit) e aggiunge a tale numero generato la nota MIDI attuale, generando un
+            unico numero
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/57.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 57 <br></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
