--- a/pages/learn/caos/02_12_06_matrici_di_markov_del_secondo_ordine.html
+++ b/pages/learn/caos/02_12_06_matrici_di_markov_del_secondo_ordine.html
@@ -232,7 +232,7 @@
             <br>
             L’algoritmo prende due note consecutive MIDI, la prima delle quali viene shiftata di 7
             posizioni (7 bit) e aggiunge a tale numero generato la nota MIDI attuale, generando un
-            unico numero
+            unico numero.
           </p>
         </div>
       </div>
@@ -247,6 +247,83 @@
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/57.webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 57 <br></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            L’oggetto anal riporta quante occorrenze sono state effettuate di una coppia di
+            numeri in ingresso.
+            <br>
+            <br>
+            Nell’algoritmo considerato, vengono contate le occorrenze di coppie di numeri che
+            contengono già una coppia per ogni numero, realizzata con lo shift.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/58.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 58 <br></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            L’oggetto prob ricava una matrice di probabilità a partire dalla occorrenze in ingresso.
+            <br>
+            <br>
+            L’oggetto % 128 estrae il resto della divisione per 128 (7 bit) riportando il numero ad
+            un valore compreso tra 0 e 127.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/59.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 59 <br></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/60.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 60 <br></p>
           </div>
         </div>
       </div>
