--- a/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
+++ b/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
@@ -138,7 +138,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_01_01_densità_di_probabilità.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_spettro_della_densit%C3%A0_di_probabilit%C3%A0.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
