--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -194,6 +194,8 @@
           <ul>
             <li><a href="https://www.youtube.com/watch?v=_b4wltMg7As" target="_blank"><b>Video Documentario - Caos, ordine e memoria associativa</b></a></li>
             <li><a href="https://docs.python.org/3/library/turtle.html" target="_blank"><b>Python library - Turtle graphics</b></a></li>
+            <li><a href="https://github.com/michaelreichmann/Mandelbrot_Set#mandelbrot-set" target="_blank"><b>Max Jit patch - Mandelbrot Set</b></a></li>
+            <li><a href="https://github.com/BGR360/mandelbrot-maxmsp" target="_blank"><b>Max Jit patch - Mandelbrot and Julia Set</b></a></li>
           </ul>
           <br><br>
           </p>
