--- a/pages/learn.html
+++ b/pages/learn.html
@@ -257,6 +257,22 @@
                             </div>
                           </div>
                           <!-- end Cards-->
+                          <!-- new Cards-->
+                          <div class="item features-image сol-12 col-md-6 col-lg-3">
+                            <div class="item-wrapper">
+                              <div class="item-img">
+                                <img src="https://www.gabrielavelitch.com/img/site/walsh.webp" data-slide-to="0" data-bs-slide-to="0">
+                              </div>
+                              <div class="item-content">
+                                <h5 class="item-title mbr-fonts-style display-7">
+                                  <br><strong>Complementi di DSP</strong>
+                                </h5>
+                              </div>
+                              <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                  &gt;</a></div>
+                            </div>
+                          </div>
+                          <!-- end Cards-->
                         </div>
                       </div>
                   </div>
