--- a/pages/learn/complementi_di_dsp.html
+++ b/pages/learn/complementi_di_dsp.html
@@ -105,7 +105,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="" target="_blank"><b>01. Teoria della Trasformata di Fourier</b></a></li>
+            <li><b>01. Teoria della Trasformata di Fourier</b></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html" target="_blank"><b>01.01. Prodotto Scalare</b></a></li>
           </ul>
           </p>
