--- a/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
@@ -94,7 +94,15 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Il prodo:o scalare nel piano euclideo è definito come il prodo:o tra
+                    le lunghezze dei due ve:ori per il coseno dell’angolo tra loro
+                    compreso. Il suo risultato è un numero reale.
+                    <br>
+                    <br>
+                    Il coseno può essere pensato come la proiezione (l’ombra) che un
+                    ve:ore proie:a sull’altro e può variare dal valore 1 (ve:ori
+                    coincidenO) a 0 (ve:ori ortogonali) a -1 (ve:ori coincidenO con verso
+                    opposto).
                   </p>
                 </div>
             </div>
