--- a/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0MB26WWVES');
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-0MB26WWVES');
+  </script>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,133 +34,172 @@
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/socicon/css/styles.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap">
+  </noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
-  <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap">
+  </noscript>
+  <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
   <!-- include internals -->
   <script>
-  function includeHTML() {
-    var z, i, elmnt, file, xhttp;
-    /* Loop through a collection of all HTML elements: */
-    z = document.getElementsByTagName("*");
-    for (i = 0; i < z.length; i++) {
-      elmnt = z[i];
-      /*search for elements with a certain atrribute:*/
-      file = elmnt.getAttribute("w3-include-html");
-      if (file) {
-        /* Make an HTTP request using the attribute value as the file name: */
-        xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function() {
-          if (this.readyState == 4) {
-            if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-            if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-            /* Remove the attribute, and call this function once more: */
-            elmnt.removeAttribute("w3-include-html");
-            includeHTML();
+    function includeHTML() {
+      var z, i, elmnt, file, xhttp;
+      /* Loop through a collection of all HTML elements: */
+      z = document.getElementsByTagName("*");
+      for (i = 0; i < z.length; i++) {
+        elmnt = z[i];
+        /*search for elements with a certain atrribute:*/
+        file = elmnt.getAttribute("w3-include-html");
+        if (file) {
+          /* Make an HTTP request using the attribute value as the file name: */
+          xhttp = new XMLHttpRequest();
+          xhttp.onreadystatechange = function() {
+            if (this.readyState == 4) {
+              if (this.status == 200) {
+                elmnt.innerHTML = this.responseText;
+              }
+              if (this.status == 404) {
+                elmnt.innerHTML = "Page not found.";
+              }
+              /* Remove the attribute, and call this function once more: */
+              elmnt.removeAttribute("w3-include-html");
+              includeHTML();
+            }
           }
+          xhttp.open("GET", file, true);
+          xhttp.send();
+          /* Exit the function: */
+          return;
         }
-        xhttp.open("GET", file, true);
-        xhttp.send();
-        /* Exit the function: */
-        return;
       }
     }
-  }
   </script>
 
 <body>
 
 
   <!-- Navbar-->
-<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
   <!-- Title-->
-<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Complementi di DSP</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Prodotto Scalare</strong></h4>
-            </div>
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Complementi di DSP</h3>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Prodotto Scalare</strong></h4>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    Il prodo:o scalare nel piano euclideo è definito come il prodo:o tra
-                    le lunghezze dei due ve:ori per il coseno dell’angolo tra loro
-                    compreso. Il suo risultato è un numero reale.
-                    <br>
-                    <br>
-                    Il coseno può essere pensato come la proiezione (l’ombra) che un
-                    ve:ore proie:a sull’altro e può variare dal valore 1 (ve:ori
-                    coincidenO) a 0 (ve:ori ortogonali) a -1 (ve:ori coincidenO con verso
-                    opposto).
-                  </p>
-                </div>
-            </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Il prodotto scalare nel piano euclideo è definito come il prodotto tra
+            le lunghezze dei due ve:ori per il coseno dell’angolo tra loro
+            compreso. Il suo risultato è un numero reale.
+            <br>
+            <br>
+            Il coseno può essere pensato come la proiezione (l’ombra) che un
+            vettore proietta sull’altro e può variare dal valore 1 (vettori
+            coincidenO) a 0 (vettori ortogonali) a -1 (ve:ori coincidenO con verso
+            opposto).
+            <br>
+            <br>
+            In altre parole si può pensare il prodo:o scalare come una sOma di
+            quanto contribuisce il ve:ore A sul vettore B.
+          </p>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <!-- Image-->
-    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-12 col-lg-5">
-            <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/caos/1.webp" alt="www.gabrielavelitch.com">
-              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 1</p>
-            </div>
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/1.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 1</p>
           </div>
         </div>
       </div>
-    </section>
-
-<!-- Prev/Next-->
-<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
-                    <br>
-                    <br>
-            </div>
-        </div>
     </div>
-</section>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Il prodo:o scalare si può estendere per ve:ori n-dimensionali ognuno con k componenO e in questo caso viene
+            definito come sommatoria dei prodoR delle rispeRve componenO dei due ve:ori. DeR a e b due ve:ori ndimensionali.
+            <br>
+            <br>
+            Ad esempio dato il ve:ore nello spazio tridimensionale a= [ 1,2,-1] e b= [-1,0,3] il loro prodo:o scalare è
+            [1,2,-1] ∙ [-1,0,3] =1 ∙(-1)+2 ∙0+(-1) ∙3=-1-3=-4
+            <br>
+            <br>
+            Altro esempio: a= [ 1,2,-1] e b= [-1,0,-1]= -1+1=0 (ve:ori ortogonali)
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Prev/Next-->
+  <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          </div>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
-<!-- Footer-->
-<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
+  <!-- Footer-->
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
 
-  <section style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
+  <section
+    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
+      href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+    <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
 
-   <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/smoothscroll/smooth-scroll.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
-   <script>
-   includeHTML();
-   </script>
+    <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/smoothscroll/smooth-scroll.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+    <script>
+      includeHTML();
+    </script>
 
-  </body>
+</body>
+
 </html>
