--- a/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
@@ -108,18 +108,18 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Il prodotto scalare nel piano euclideo è definito come il prodotto tra
-            le lunghezze dei due ve:ori per il coseno dell’angolo tra loro
+            le lunghezze dei due vettori per il coseno dell’angolo tra loro
             compreso. Il suo risultato è un numero reale.
             <br>
             <br>
             Il coseno può essere pensato come la proiezione (l’ombra) che un
             vettore proietta sull’altro e può variare dal valore 1 (vettori
-            coincidenO) a 0 (vettori ortogonali) a -1 (ve:ori coincidenO con verso
+            coincidenti) a 0 (vettori ortogonali) a -1 (vettori coincidenti con verso
             opposto).
             <br>
             <br>
-            In altre parole si può pensare il prodo:o scalare come una sOma di
-            quanto contribuisce il ve:ore A sul vettore B.
+            In altre parole si può pensare il prodotto scalare come una sOma di
+            quanto contribuisce il vettore A sul vettore B.
           </p>
         </div>
       </div>
