--- a/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
@@ -146,15 +146,16 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Il prodo:o scalare si può estendere per ve:ori n-dimensionali ognuno con k componenO e in questo caso viene
-            definito come sommatoria dei prodoR delle rispeRve componenO dei due ve:ori. DeR a e b due ve:ori ndimensionali.
+            Il prodotto scalare si può estendere per vettori n-dimensionali ognuno con k componenti e in questo caso viene
+            definito come sommatoria dei prodotti delle rispettive componenti dei due vettori. Detti a e b due vettori
+            n-dimensionali.
             <br>
             <br>
-            Ad esempio dato il ve:ore nello spazio tridimensionale a= [ 1,2,-1] e b= [-1,0,3] il loro prodo:o scalare è
+            Ad esempio dato il vettore nello spazio tridimensionale a= [ 1,2,-1] e b= [-1,0,3] il loro prodotto scalare è
             [1,2,-1] ∙ [-1,0,3] =1 ∙(-1)+2 ∙0+(-1) ∙3=-1-3=-4
             <br>
             <br>
-            Altro esempio: a= [ 1,2,-1] e b= [-1,0,-1]= -1+1=0 (ve:ori ortogonali)
+            Altro esempio: a= [ 1,2,-1] e b= [-1,0,-1]= -1+1=0 (vettori ortogonali)
           </p>
         </div>
       </div>
