--- a/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
@@ -150,12 +150,24 @@
             definito come sommatoria dei prodotti delle rispettive componenti dei due vettori. Detti a e b due vettori
             n-dimensionali.
             <br>
+            $$a \cdot b = a_1 b_1 + a_2 b_2 + ... + a_n b_n = \displaystyle\sum_{i=1}^{n} a_i b_i$$
             <br>
             Ad esempio dato il vettore nello spazio tridimensionale a= [ 1,2,-1] e b= [-1,0,3] il loro prodotto scalare è
             [1,2,-1] ∙ [-1,0,3] =1 ∙(-1)+2 ∙0+(-1) ∙3=-1-3=-4
             <br>
             <br>
             Altro esempio: a= [ 1,2,-1] e b= [-1,0,-1]= -1+1=0 (vettori ortogonali)
+            <br>
+            <br>
+          <h3>Prodotto scalare nello spazio euclideo n dimensionale</h3>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Il prodotto scalare (detto anche prodotto interno) tra due vettori si
+            indica con i simboli ⟨⟩ detti Bra e ket con i due vettori separati da una
+            virgola.
+            ⟨𝑎,𝑏⟩
+            <br>
+            <br>
+            Nell’esempio precedente ⟨𝐚,𝐛⟩=Σ𝑖=1↑𝑛▒ 𝑎↓𝑖 ∙ 𝑏↓𝑖  
           </p>
         </div>
       </div>
