--- a/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html
@@ -152,11 +152,11 @@
             <br>
             $$a \cdot b = a_1 b_1 + a_2 b_2 + ... + a_n b_n = \displaystyle\sum_{i=1}^{n} a_i b_i$$
             <br>
-            Ad esempio dato il vettore nello spazio tridimensionale a= [ 1,2,-1] e b= [-1,0,3] il loro prodotto scalare è
-            [1,2,-1] ∙ [-1,0,3] =1 ∙(-1)+2 ∙0+(-1) ∙3=-1-3=-4
+            Ad esempio dato il vettore nello spazio tridimensionale a = [ 1,2,-1] e b = [-1,0,3] il loro prodotto scalare è
+            \([1,2,-1] \cdot [-1,0,3] = 1 \cdot (-1) + 2 \cdot 0 + (-1) \cdot 3 = -1 - 3 = -4\)
             <br>
             <br>
-            Altro esempio: a= [ 1,2,-1] e b= [-1,0,-1]= -1+1=0 (vettori ortogonali)
+            Altro esempio: a = [ 1,2,-1] e b= [-1,0,-1] = -1 + 1 = 0 (vettori ortogonali)
             <br>
             <br>
           <h3>Prodotto scalare nello spazio euclideo n dimensionale</h3>
@@ -167,7 +167,7 @@
             ⟨𝑎,𝑏⟩
             <br>
             <br>
-            Nell’esempio precedente ⟨𝐚,𝐛⟩=Σ𝑖=1↑𝑛▒ 𝑎↓𝑖 ∙ 𝑏↓𝑖  
+            Nell’esempio precedente \(⟨a, b⟩ = \displaystyle\sum_{i=1}^{n} a_i \cdot b_i
           </p>
         </div>
       </div>
