--- a/pages/learn/complementi_di_dsp.html
+++ b/pages/learn/complementi_di_dsp.html
@@ -107,9 +107,11 @@
           <ul>
             <li><b>01. Teoria della Trasformata di Fourier</b></li>
             <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_prodotto_scalare.html" target="_blank"><b>01.01. Prodotto Scalare</b></a></li>
-          </ul>
-          </p>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html" target="_blank"><b>01.01. Prodotto Scalare</b></a></li>
+              <ul>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_01_realizzazione_in_max_msp.html" target="_blank"><b>01.01.01. Realizzazione in Max MSP</b></a></li>
+              </ul>
+              </p>
         </div>
       </div>
     </div>
