--- a/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
@@ -167,7 +167,7 @@
             ⟨𝑎,𝑏⟩
             <br>
             <br>
-            Nell’esempio precedente \(⟨a, b⟩ = \displaystyle\sum_{i=1}^{n} a_i \cdot b_i
+            Nell’esempio precedente \(⟨a, b⟩ = \displaystyle\sum_{i=1}^{n} a_i \cdot b_i\)
           </p>
         </div>
       </div>
