--- a/pages/learn/complementi_di_dsp.html
+++ b/pages/learn/complementi_di_dsp.html
@@ -109,7 +109,8 @@
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html" target="_blank"><b>01.01. Prodotto Scalare</b></a></li>
               <ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_01_realizzazione_in_max_msp.html" target="_blank"><b>01.01.01. Realizzazione in Max MSP</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_01_prodotto_scalare_in_max_msp.html" target="_blank"><b>01.01.01. Prodotto Scalare in Max MSP</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_02_coordinate_cartesiane_e_polari_in_max_msp.html" target="_blank"><b>01.01.02. Coordinate Cartesiane e Polari in Max MSP</b></a></li>
               </ul>
               </p>
         </div>
