--- a/pages/learn/complementi_di_dsp/01_01_01_prodotto_scalare_in_max_msp.html
+++ b/pages/learn/complementi_di_dsp/01_01_01_prodotto_scalare_in_max_msp.html
@@ -87,6 +87,19 @@
     </div>
 </section>
 
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/complementi_di_dsp/2.webp" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 2 <br>Prodotto scalare in rappresentazione cartesiana</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
