--- a/pages/learn/complementi_di_dsp/01_01_01_prodotto_scalare_in_max_msp.html
+++ b/pages/learn/complementi_di_dsp/01_01_01_prodotto_scalare_in_max_msp.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Realizzazione in Max MSP</title>
+  <title>Prodotto Scalare in Max MSP</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -81,7 +81,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Complementi di DSP</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Realizzazione in Max MSP</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Prodotto Scalare in Max MSP</strong></h4>
             </div>
         </div>
     </div>
@@ -100,20 +100,6 @@
     </div>
   </div>
 </section>
-
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
 
 <!-- Prev/Next-->
