--- a/pages/learn/complementi_di_dsp/01_01_02_coordinate_cartesiane_e_polari_in_max_msp.html
+++ b/pages/learn/complementi_di_dsp/01_01_02_coordinate_cartesiane_e_polari_in_max_msp.html
@@ -88,19 +88,33 @@
 </section>
 
 
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-
-                  </p>
-                </div>
-            </div>
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/complementi_di_dsp/3.webp" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 3 <br></p>
         </div>
-    </section>
+      </div>
+    </div>
+  </div>
+</section>
 
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/complementi_di_dsp/4.webp" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4 <br></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <!-- Prev/Next-->
