--- a/pages/learn/complementi_di_dsp.html
+++ b/pages/learn/complementi_di_dsp.html
@@ -111,6 +111,7 @@
               <ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_01_prodotto_scalare_in_max_msp.html" target="_blank"><b>01.01.01. Prodotto Scalare in Max MSP</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_02_coordinate_cartesiane_e_polari_in_max_msp.html" target="_blank"><b>01.01.02. Coordinate Cartesiane e Polari in Max MSP</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html" target="_blank"><b>01.01.03. Prodotto Scalare nello Spazio delle Funzioni</b></a></li>
               </ul>
               </p>
         </div>
