--- a/pages/learn/complementi_di_dsp.html
+++ b/pages/learn/complementi_di_dsp.html
@@ -113,6 +113,19 @@
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_02_coordinate_cartesiane_e_polari_in_max_msp.html" target="_blank"><b>01.01.02. Coordinate Cartesiane e Polari in Max MSP</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html" target="_blank"><b>01.01.03. Prodotto Scalare nello Spazio delle Funzioni</b></a></li>
               </ul>
+            </ul>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html" target="_blank"><b>02. Fast Fourier Transform</b></a></li>
+            <ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/02_01_principi_della_fft.html" target="_blank"><b>02.01. Principi della FFT</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/02_02_fft_in_max_msp.html" target="_blank"><b>02.02. FFT in Max MSP</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/02_03_00_pfft~.html" target="_blank"><b>02.03. pfft~</b></a></li>
+              <ul>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/02_03_01_visualizzazione_dello_spettro_con_pfft.html" target="_blank"><b>02.03.01. Visualizzazione dello Spettro con pfft~</b></a></li>
+              </ul>
+            </ul>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/03_00_teorema_di_fourier_e_dtf.html" target="_blank"><b>03. Teorema di Fourier e DFT</b></a></li>
+            <ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/03_01_dft_fft.html" target="_blank"><b>03.01. DFT - FFT</b></a></li>
               </p>
         </div>
       </div>
