--- a/pages/learn/complementi_di_dsp.html
+++ b/pages/learn/complementi_di_dsp.html
@@ -82,7 +82,7 @@
         <div class="card col-12 col-lg-10">
           <div class="card-wrapper">
             <div class="card-box align-center">
-              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>CAOS</strong></h4>
+              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>COMPLEMENTI DI DSP</strong></h4>
               <h3 class="card-title mbr-fonts-style align-center"><strong>Lezioni di <a href="https://www.linkedin.com/in/riccardo-santoboni-61922824/" target="_blank"><b>Riccardo Santoboni</b></a></strong></h3>
             </div>
           </div>
