--- a/pages/learn/complementi_di_dsp/03_01_dft_fft.html
+++ b/pages/learn/complementi_di_dsp/03_01_dft_fft.html
@@ -108,7 +108,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/03_00_teorema_di_fourier_e_dtf.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
