--- a/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
@@ -163,8 +163,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Il prodotto scalare (detto anche prodotto interno) tra due vettori si
             indica con i simboli ⟨⟩ detti Bra e ket con i due vettori separati da una
-            virgola.
-            ⟨𝑎,𝑏⟩
+            virgola: \(⟨a, b⟩\)
             <br>
             <br>
             Nell’esempio precedente \(⟨a, b⟩ = \displaystyle\sum_{i=1}^{n} a_i \cdot b_i\)
