--- a/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
@@ -132,7 +132,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/complementi_di_dsp/1.webp" alt="www.gabrielavelitch.com" width="200">
+            <img src="https://www.gabrielavelitch.com/img/complementi_di_dsp/1.webp" alt="www.gabrielavelitch.com" style="height:50%;">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 1</p>
           </div>
         </div>
