--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -112,7 +112,7 @@
             di sommatoria viene esteso a valori continui e diviene un integrale.
             <br>
             <br>
-            \(⟨f, g⟩ = \int_{-\infty^\infty} f(t) \cdot g(t)dt\)  indica il prodotto scalare di due funzioni nel dominio del tempo.
+            \(⟨f, g⟩ = \int_-\infty^\infty f(t) \cdot g(t)dt\)  indica il prodotto scalare di due funzioni nel dominio del tempo.
             <br>
             <br>
             Due funzioni sono tra loro ortogonali se il loro prodotto scalare è pari a zero.
@@ -121,7 +121,7 @@
             Anche in questo caso il numero generato dal prodotto scalare fornisce una stima di quanto f contribuisce su g.
             <br>
             <br>
-
+Effettuiamo ad esempio il prodotto scalare tra le funzioni
           </p>
         </div>
       </div>
