--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -121,7 +121,14 @@
             Anche in questo caso il numero generato dal prodotto scalare fornisce una stima di quanto f contribuisce su g.
             <br>
             <br>
-Effettuiamo ad esempio il prodotto scalare tra le funzioni
+            Effettuiamo ad esempio il prodotto scalare tra le funzioni:
+            <br>
+            <br>
+            \(f = sin(t)\) e \(g = cos(t)\)
+            <br>
+            Tra gli estremi \(-\pi\) e \(\pi\).
+<br>
+            Dalla definizione \((⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt\)
           </p>
         </div>
       </div>
