--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -118,7 +118,7 @@
             Due funzioni sono tra loro ortogonali se il loro prodotto scalare è pari a zero.
             <br>
             <br>
-            Anche in questo caso il numero generato dal prodotto scalare fornisce una stima di quanto f contribuisce su g.
+            Anche in questo caso il numero generato dal prodotto scalare fornisce una stima di quanto \(f\) contribuisce su \(g\).
             <br>
             <br>
             Effettuiamo ad esempio il prodotto scalare tra le funzioni:
