--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -127,8 +127,12 @@
             \(f = sin(t)\) e \(g = cos(t)\)
             <br>
             Tra gli estremi \(-\pi\) e \(\pi\).
-<br>
-            Dalla definizione \((⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt\)
+            <br>
+            Dalla definizione \(⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt\) 
+            <br>
+            utilizzando l'identità \(sin(2t) = 2sin(t) \cdot cos(t)\) e sostituendo nell'integrale si ha:
+            <br>
+            $$$$
           </p>
         </div>
       </div>
