--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -128,11 +128,11 @@
             <br>
             Tra gli estremi \(-\pi\) e \(\pi\).
             <br>
-            Dalla definizione \(⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt\) 
+            Dalla definizione \(⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt\)
             <br>
             utilizzando l'identità \(sin(2t) = 2sin(t) \cdot cos(t)\) e sostituendo nell'integrale si ha:
             <br>
-            $$$$
+            $$⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt$$
           </p>
         </div>
       </div>
