--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -112,7 +112,7 @@
             di sommatoria viene esteso a valori continui e diviene un integrale.
             <br>
             <br>
-            \(⟨f, g⟩ = \int_-\infty^\infty f(t) \cdot g(t)dt\)  indica il prodotto scalare di due funzioni nel dominio del tempo.
+            \(⟨f, g⟩ = \int_(-\infty)^\infty f(t) \cdot g(t)dt\)  indica il prodotto scalare di due funzioni nel dominio del tempo.
             <br>
             <br>
             Due funzioni sono tra loro ortogonali se il loro prodotto scalare è pari a zero.
@@ -128,7 +128,7 @@
             <br>
             Tra gli estremi \(-\pi\) e \(\pi\).
             <br>
-            Dalla definizione \(⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt\)
+            Dalla definizione \(⟨f, g⟩ = \int_(-\pi)^\pi sin(t) \cdot cos(t)dt\)
             <br>
             utilizzando l'identità \(sin(2t) = 2sin(t) \cdot cos(t)\) e sostituendo nell'integrale si ha:
             <br>
