--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -121,7 +121,7 @@
             Anche in questo caso il numero generato dal prodotto scalare fornisce una stima di quanto \(f\) contribuisce su \(g\).
             <br>
             <br>
-            Effettuiamo ad esempio il prodotto scalare tra le funzioni:
+            <b>Effettuiamo ad esempio il prodotto scalare tra le funzioni:</b>
             <br>
             <br>
             \(f = sin(t)\) e \(g = cos(t)\)
@@ -134,10 +134,17 @@
             <br>
             $$⟨f, g⟩ = \int_{-\pi}^{\pi} sin(t) \cdot cos(t)dt = \int_{-\pi}^{\pi} sin(2t) \cdot d(2t) = \frac{1}{2} \int_{-2\pi}^{2\pi} sin(2t) \cdot d(2t) = -\frac{1}{2} cos(t) \int_{-2\pi}^{2\pi} = -0.5 [cos(2\pi) - cos(-2\pi)] =0$$
             <br>
-            Due funzioni seno e coseno sono quindi tra loro ortogonali se il loro prodo:o scalare è pari a zero.
+            Due funzioni seno e coseno sono quindi tra loro ortogonali se il loro prodotto scalare è pari a zero.
             <br>
             <br>
-
+            <b>Consideriamo il seguente esempio:</b>
+            <br>
+            <br>
+            \(f = x(t)\) e \(g = e^{-j\omega t}\)
+            <br>
+            Tra gli estremi \(-\pi\) e \(\pi\).
+            <br>
+            Dalla definizione
           </p>
         </div>
       </div>
