--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -144,7 +144,9 @@
             <br>
             Tra gli estremi \(-\pi\) e \(\pi\).
             <br>
-            Dalla definizione
+            Dalla definizione di prodotto scalare:
+            <br>
+              $$⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt =
           </p>
         </div>
       </div>
