--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -146,7 +146,7 @@
             <br>
             Dalla definizione di prodotto scalare:
             <br>
-              $$⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt =
+              $$⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt = \int_{-\infty}^{\infty} x(t) \cdot [cos(\omega t) - jsin(\omega t)] dt = \int_{-\infty}^{\infty} x(t) \cdot cos(\omega t) dt - j \int_{-\infty}^{\infty} x(t) \cdot sin(\omega t) dt$$
           </p>
         </div>
       </div>
