--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -146,7 +146,21 @@
             <br>
             Dalla definizione di prodotto scalare:
             <br>
-              $$⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt = \int_{-\infty}^{\infty} x(t) \cdot [cos(\omega t) - jsin(\omega t)] dt = \int_{-\infty}^{\infty} x(t) \cdot cos(\omega t) dt - j \int_{-\infty}^{\infty} x(t) \cdot sin(\omega t) dt$$
+            $$⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt = \int_{-\infty}^{\infty} x(t) \cdot [cos(\omega t) - jsin(\omega t)] dt = \int_{-\infty}^{\infty} x(t) \cdot cos(\omega t) dt - j \int_{-\infty}^{\infty} x(t) \cdot
+            sin(\omega t) dt$$
+            <br>
+            Questo prodotto può essere interpretato come un prodotto scalare tra:
+            <br>
+            la funzione \((x(t)\) e la funzione \(cos(\omega t)\) per ogni \(\omega\).
+            la funzione \(x(t)\) e la funzione \(sin(\omega t)\) per ogni \(\omega\).
+            <br>
+            <br>
+            \(⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt\) è detta Trasformata di Fourier.
+            <br>
+            <br>
+            Per ogni 𝜔 il prodotto scalare genera una coppia di numeri che sono i coefficienti di Fourier della trasformazione
+            ed indicano se la generica componente \(cos(\omega t)\) o \(sin(\omega t)\) è contenuta nella \(x(t)\) per ogni valore di \(\omega\).
+            In caso affermativo con quale presenza (valore del prodotto scalare \(\in \Re)).
           </p>
         </div>
       </div>
