--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -155,7 +155,7 @@
             la funzione \(x(t)\) e la funzione \(sin(\omega t)\) per ogni \(\omega\).
             <br>
             <br>
-            \(⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt\) è detta Trasformata di Fourier.
+            \(⟨f, g⟩ = \int_{-\infty}^{\infty} x(t) \cdot e^{-j\omega t} dt\) è detta <a href="https://www.gabrielavelitch.com/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html" target="_blank"><b>Fast Fourier Transform</b></a>.
             <br>
             <br>
             Per ogni 𝜔 il prodotto scalare genera una coppia di numeri che sono i coefficienti di Fourier della trasformazione
