--- a/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
@@ -152,7 +152,7 @@
             <br>
             $$a \cdot b = a_1 b_1 + a_2 b_2 + ... + a_n b_n = \displaystyle\sum_{i=1}^{n} a_i b_i$$
             <br>
-            Ad esempio dato il vettore nello spazio tridimensionale a = [ 1,2,-1] e b = [-1,0,3] il loro prodotto scalare è
+            Ad esempio dato il vettore nello spazio tridimensionale \(a = [ 1, 2, -1]\) e \(b = [-1, 0,3 ]\) il loro prodotto scalare è
             \([1,2,-1] \cdot [-1,0,3] = 1 \cdot (-1) + 2 \cdot 0 + (-1) \cdot 3 = -1 - 3 = -4\)
             <br>
             <br>
@@ -162,8 +162,7 @@
           <h3>Prodotto scalare nello spazio euclideo n dimensionale</h3>
           <p class="mbr-text mbr-fonts-style display-7">
             Il prodotto scalare (detto anche prodotto interno) tra due vettori si
-            indica con i simboli ⟨⟩ detti Bra e ket con i due vettori separati da una
-            virgola: \(⟨a, b⟩\)
+            indica con i simboli ⟨⟩ detti <b>Bra</b> e <b>ket</b> con i due vettori separati da una virgola: \(⟨a, b⟩\)
             <br>
             <br>
             Nell’esempio precedente \(⟨a, b⟩ = \displaystyle\sum_{i=1}^{n} a_i \cdot b_i\)
