--- a/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html
+++ b/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html
@@ -94,7 +94,15 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    La FFT (fast Fourier transform) è un metodo molto rapido per poter
+                    estrarre i coefficienti di Fourier da una funzione del tempo.
+                    <br>
+                    <br>
+                    Infatti la trasformata di Fourier si applica a funzioni avente campo di
+                    esistenza da \(-\infty\) a \+\infty\), mentre campionando il segnale si deve
+                    effettuare l’analisi e quindi la trasformata di Fourier solo su un
+                    frammento del segnale, che viene preventivamente messo in un
+                    buffer di memoria.
                   </p>
                 </div>
             </div>
