--- a/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html
+++ b/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html
@@ -99,7 +99,7 @@
                     <br>
                     <br>
                     Infatti la trasformata di Fourier si applica a funzioni avente campo di
-                    esistenza da \(-\infty\) a \+\infty\), mentre campionando il segnale si deve
+                    esistenza da \(-\infty\) a \(+\infty\), mentre campionando il segnale si deve
                     effettuare l’analisi e quindi la trasformata di Fourier solo su un
                     frammento del segnale, che viene preventivamente messo in un
                     buffer di memoria.
