--- a/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
+++ b/pages/learn/complementi_di_dsp/01_01_00_prodotto_scalare.html
@@ -156,7 +156,7 @@
             \([1,2,-1] \cdot [-1,0,3] = 1 \cdot (-1) + 2 \cdot 0 + (-1) \cdot 3 = -1 - 3 = -4\)
             <br>
             <br>
-            Altro esempio: a = [ 1,2,-1] e b= [-1,0,-1] = -1 + 1 = 0 (vettori ortogonali)
+            Altro esempio: \(a = [ 1, 2, -1]\) e \(b= [-1, 0, -1] = -1 + 1 = 0\) (vettori ortogonali)
             <br>
             <br>
           <h3>Prodotto scalare nello spazio euclideo n dimensionale</h3>
