--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -160,7 +160,7 @@
             <br>
             Per ogni 𝜔 il prodotto scalare genera una coppia di numeri che sono i coefficienti di Fourier della trasformazione
             ed indicano se la generica componente \(cos(\omega t)\) o \(sin(\omega t)\) è contenuta nella \(x(t)\) per ogni valore di \(\omega\).
-            In caso affermativo con quale presenza (valore del prodotto scalare \(\in \Re\).
+            In caso affermativo con quale presenza (valore del prodotto scalare \(\in \Re\)).
           </p>
         </div>
       </div>
