--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -138,9 +138,9 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><b>(1968-70) - Mario Bertoncini: </b><a href="http://www.mariobertoncini.com/all/slides/1968-69_cartridge_music.html" target="_blank"><b>photo</b></a>, <a href="https://www.discogs.com/it/release/556053-Mario-Bertoncini-Earle-Brown-John-Cage-Cifre-Four-Systems-Cartridge-Music" target="_blank"><b>vinyl</b></a>
+            <li><b>(1968-70) - Mario Bertoncini: </b><a href="http://www.mariobertoncini.com/all/slides/1968-69_cartridge_music.html" target="_blank"><b>photo</b></a>, <a href="https://www.discogs.com/it/release/556053-Mario-Bertoncini-Earle-Brown-John-Cage-Cifre-Four-Systems-Cartridge-Music" target="_blank"><b>vinyl</b></a></li>
             <li><b>(2016/11/19) - John Cage Musicircus, Town Hall, Seattle: </b><a href="https://www.youtube.com/watch?v=qoRPaWhovEc" target="_blank"><b>preparation video</b></a></li>
-            <li><b>() - : </b><a href="" target="_blank"><b></b></a></li>
+            <li><b>() - Langham Research Centre: </b><a href="https://www.youtube.com/watch?v=VaNHAswN2hU&t=8s" target="_blank"><b>performance video</b></a></li>
             <li><b>() - : </b><a href="" target="_blank"><b></b></a></li>
             <li><b>(2019) - Klang (Rome, Italy): </b><a href="" target="_blank"><b></b></a></li>
           </ul>
