--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -105,7 +105,8 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html" target="_blank"><b>01. Come Affrontare lo Studio dell'Acustica degli Ambienti</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html" target="_blank"><b>01. Come Affrontare lo Studio dell'Acustica degli
+                  Ambienti</b></a></li>
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html" target="_blank"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html" target="_blank"><b>01.02. Tre Metodi di Studio</b></a></li>
@@ -131,13 +132,13 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html" target="_blank"><b>04.03. Attenuazione Dovuta alla Propagazione</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html" target="_blank"><b>04.04. Filtraggio dell'Aria</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html" target="_blank"><b>04.05. Formula di Sabine con Filtraggio dell'Aria</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html" target="_blank"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html" target="_blank"><b>04.06. Tempo di Riverberazione Tramite Risposta
+                    all'Impulso</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html" target="_blank"><b>04.07. Norma ISO 3382 e alcuni Descrittori Statistici</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html" target="_blank"><b>04.08. Descrittori Statistici Relativi all'Energia</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html" target="_blank"><b>04.09. Meccanismi Percettivi dello Spazio e della Sorgente</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html" target="_blank"><b>04.09. Meccanismi Percettivi dello Spazio e della
+                    Sorgente</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_10_meccanismi_percetttivi_della_distanza.html" target="_blank"><b>04.10. Meccanismi Percettivi della Distanza</b></a></li>
-            </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/05_00_misurazione_acustica_di_un_ambiente.html" target="_blank"><b>05. Misurazione Acustica di un Ambiente</b></a></li>
               </p>
         </div>
       </div>
