--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -180,7 +180,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             In cui al numeratore abbiamo l'energia utile ed al denominatore abbiamo l'energia dannosa dagli 50/80 ms fino ad infinito.
             Essi sono usati per l'intellegibilità del parlato(C50) e della musica(C80).
-            Il C50 ha bisongo che tutte le articolazioni siano percepibili. Per la musica va bene il C80 poi le articolazioni sono più lente del parlato.
+            Il C50 ha bisongo che tutte le articolazioni siano percepibili. Per la musica va bene il C80 poichè le articolazioni sono più lente del parlato.
             Il livello di intellegibilità può essere anche piú basso rispetto al parlato.
             <br>
             <br>
